[metadata]
name = ninjadog
version = 0.5.2
description = Pug template support in Python
long_description = file: README.rst
author = Stephan Fitzpatrick
author_email = knowsuchagency@gmail.com
url = https://github.com/knowsuchagency/ninjadog
license = MIT license
keywords = ninjadog, pug, jinja2, html, templating
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6

[options]
zip_safe = False
include_package_data = True
packages = find:
test_suite = tests
setup_requires = pytest-runner==5.1

[bdist_wheel]
universal = 1

[flake8]
exclude = docs

[aliases]
test = pytest

